@@ -1202,6 +1202,7 @@ namespace libtorrent {
 		return m_alloc.ptr(m_file_idx);
 	}
 
+#ifndef TORRENT_NO_DEPRECATE
 	torrent_added_alert::torrent_added_alert(aux::stack_allocator& alloc
 		, torrent_handle const& h)
 		: torrent_alert(alloc, h)
@@ -1211,6 +1212,7 @@ namespace libtorrent {
 	{
 		return torrent_alert::message() + " added";
 	}
+#endif
 
 	torrent_removed_alert::torrent_removed_alert(aux::stack_allocator& alloc
 		, torrent_handle const& h, sha1_hash const& ih)
